Fix for the cursor icon not getting set for the splitter when moving from scintilla (i.e. an editor pane) to the splitter for sidebars or bottom pane.
Shane's guess at the problem is that the "mouseenter" event doesn't get sent to
the element immediatly adjacent to the SciMoz plugin when moving the mouse out
... and that that event is probably what Mozilla is using to change the cursor
icon for the splitter. Adding 1px (transparent, to not look too ugly) around
the plugin fixes that.

This is the first part of the fix/workaround for:
http://bugs.activestate.com/show_bug.cgi?id=80756

r=shanec

(integrated from komodo (trunk) change 26975 by trentm)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@3055 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/bindings/sidebar.css
+++ b/src/chrome/komodo/skin/plat/mac/bindings/sidebar.css
@@ -1,4 +1,15 @@
 
+scintilla {
+  /* Bug 80756: These borders are necessary on Mac OS X so that the "mouseenter"
+   * event makes it to the sidebar/bottom-pane splitters when moving the mouse
+   * from the scintilla plugin to the splitter. Without this the cursor isn't
+   * changed to that for the splitter making it very difficult to grab it.
+   */
+  border-left: 1px solid rgba(0,0,0,0.10);
+  border-right: 1px solid rgba(0,0,0,0.10);
+  border-bottom: 1px solid rgba(0,0,0,0.10);
+}
+
 
 tabs[type="sidebar"]
 {
